# yolo_with_ros

./: README.md  darknet_with_ros.py  data_figure.py  display_webcam_ros.py  get_depth_kinect_ros.py  pub_roi.py  tennis_robot.txt  webcam_ros.py
command_control/: CMakeLists.txt~  package.xml~
command_control/carrus_safty_gateway/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
command_control/carrus_safty_gateway/launch/: carrus_base_ekf.launch~  carrus_who_is_who.launch  carrus_who_is_who.launch~
command_control/carrus_safty_gateway/node/: carrus_base_state.py~  carrus_safty_gateway.py  carrus_safty_gateway.py~
command_control/command_center/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
command_control/command_center/launch/: dynamixel.launch~  joystick_arm_control.launch  joystick_arm_control.launch~  leap_motion_arm_control.launch  leap_motion_arm_control.launch~  leap_motion_controller_arm.launch~  shou_bing_teleop.launch  shou_bing_teleop.launch~  teleop.launch~  teleop_btp.launch  teleop_btp.launch~  teleop_f710.launch~  tennisbot_teleop_btp.launch~  test_robot_gazebo (copy).launch~  test_robot_gazebo.launch~  turtlebot_teleop.launch
command_control/command_center/node/: arm_auto_move.py~  command_bridge_arm_joy.py~  command_bridge_arm_leap.py  command_bridge_arm_leap.py~  command_bridge_arm_srv.py~  command_bridge_base.py~  command_bridge_base_joy.py  command_bridge_base_leap.py~  robot_control_amanda.py~  test_bot.py~
command_control/joystick_controller/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
command_control/joystick_controller/launch/: joystick_control.launch~  joystick_control_btp.launch~  joystick_controller_btp.launch  joystick_controller_btp.launch~  joystick_controller_f710.launch~  joystick_driver.launch~  joystick_driver0.launch~
command_control/joystick_controller/node/: central_command.py  central_command.py~  command_bridge_arm.py~  joystick.py~  joystick_command.py~  joystick_controller.py~  joystick_controller_btp.py  joystick_controller_btp.py~  joystick_controller_f710.py~  joystick_mapping.py~
